# silly-bot

./: .gitignore  README.md  pyproject.toml  shell.nix
src/: assist.py  bot.py  commands.py  replies.py  utils.py
src/silly_bot/: commands.py  main.py  replies.py  utils.py
